Fixed bug #41686 (Omitting length param in array_slice not possible).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@238000 c90b9560-bf6c-de11-be94-00142212c4b1